# codemaster

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  i18n.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/agent/: loop.rs  mod.rs  registry.rs
src-tauri/src/api/: deepseek.rs  mod.rs  unified.rs
src-tauri/src/commands/: chat.rs  mod.rs  session.rs  settings.rs
src-tauri/src/db/: mod.rs
src-tauri/src/tools/: bash.rs  file.rs  mod.rs  project.rs  search.rs
src/components/: Layout.css  Layout.tsx
src/components/Chat/: ChatInput.css  ChatInput.tsx  MessageList.css  MessageList.tsx  ToolCall.css  ToolCall.tsx
src/components/Session/: SessionList.css  SessionList.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/Terminal/: Terminal.css  Terminal.tsx
src/locales/: en.json  zh.json
src/store/: chatStore.ts
tools/browser/: inspect.js  package-lock.json  package.json  screenshot.js
