[package]
name = "codemaster"
version = "0.1.0"
description = "AI Coding Agent for Chinese Developers"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "2"
futures = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2"
regex = "1"
glob = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
